--- a/src/components/PokedexPage/styles/PokeCard.css
+++ b/src/components/PokedexPage/styles/PokeCard.css
@@ -4,11 +4,12 @@
   border-radius: 0.7em;
   border: 0.7em solid #ccc;
   cursor: pointer;
-  transition: transform 400ms ease;
+  transition: transform 200ms ease-in-out;
 }
 
 .pokecard:hover {
   transform: scale(1.03);
+  box-shadow: 0px 3px 7px #444444;
 }
 
 .pokecard__header {
