--- a/src/components/PokedexPage/styles/PokeHeader.css
+++ b/src/components/PokedexPage/styles/PokeHeader.css
@@ -21,8 +21,8 @@
 
 @media only screen and (max-width: 600px) {
     .header__background {
-       min-width: 100%;
-       min-height: 200%;
+       /* min-width: 100%; */
+       /* min-height: 200%; */
     }
 
     .header__logo {
