--- a/src/components/PokedexPage/styles/PokedexPage.css
+++ b/src/components/PokedexPage/styles/PokedexPage.css
@@ -1,6 +1,6 @@
 .pokedex__container {
   margin: 0 2em 2em 0;
-  max-width: 70%;
+  max-width: 100%;
 
 }
 
@@ -11,6 +11,11 @@
   flex-wrap: wrap;
   align-items: center;
   gap: 2em 2em;
+}
+
+.pokedex__wrapper {
+  max-width: 80%;
+  margin: 0 auto;
 }
 
 .pokedex__greeting {
@@ -26,10 +31,25 @@
 
 .pokedex__search__container {
   margin: auto 50px 0 50px;
-    width: 290px;
-    
-    display: flex;
-    justify-content: center;
+  width: 290px;
+  display: flex;
+  justify-content: center;
+}
+
+.pokedex__value {
+  display: flex;
+  margin-right: 50px;
+}
+
+.pokedex__search__container--type {
+  /* margin: auto 50px 0 50px; */
+  width: 150px;
+  display: flex;
+  justify-content: center;
+}
+
+.pokedex__list {
+  background-color: rgba(255, 81, 81, 0.136);
 }
 
 .pokedex__input {
@@ -45,18 +65,21 @@
 .pokedex__button {
   background-color: rgb(255, 27, 27);
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+  color: white;
   width: 25%;  
   font-size: 1.1em;
   min-height: 100%;
   border-radius: 0 10px 10px 0;
 }
 
+
+
 .pokedex__cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 3em 2em;
-  margin-top: 4em;
+  margin-top: 6em;
 }
 
 @media only screen and (max-width: 600px) {
