--- a/src/components/PokedexPage/styles/PokeNamePage.css
+++ b/src/components/PokedexPage/styles/PokeNamePage.css
@@ -1,20 +1,24 @@
 .pokemon__container {
-    max-width: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .pokemon__wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .pokemon__img {
   max-width: 30%;
-  margin: 0 auto;
+  min-width: 200px;
+  width: 100%;
+  margin: 2rem auto;
   margin-bottom: 2rem;
 }
 
@@ -23,8 +27,6 @@
   font-size: 2rem;
   margin-bottom: 1rem;
 }
-
-
 
 .pokemon__name {
   text-align: center;
@@ -37,6 +39,7 @@
   display: flex;
   justify-content: center;
   gap: 6rem;
+  margin: 0 auto;
   margin-bottom: 2rem;
 }
 
@@ -58,12 +61,14 @@
   gap: 0.5rem;
 }
 
-
 .pokemon__char {
   width: 100%;
+  margin: 0 auto;
   margin-top: 2rem;
   display: flex;
-  justify-content:space-evenly;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 3rem;
   margin-bottom: 2rem;
 }
 
@@ -80,22 +85,17 @@
 
 .pokemon__type__list {
   display: flex;
-  
-
 }
-
 
 .pokemon__types {
   width: fit-content;
   padding: 0.5rem;
   border-radius: 0.5rem;
   font-size: 1.6rem;
-  border: 1px solid ;
+  border: 1px solid;
   padding: 0.5rem 3rem;
   margin: 1rem;
 }
-
-
 
 .pokemon__ability__container {
   display: flex;
@@ -110,9 +110,7 @@
 
 .pokemon__ability__list {
   display: flex;
-
 }
-
 
 .pokemon__abilities {
   width: fit-content;
@@ -125,28 +123,13 @@
 }
 
 .pokemon__stats__container {
-    width: 100%;
-    
+  width: 100%;
 }
 
 .pokemon__stats__title {
   text-align: center;
   font-size: 2rem;
 }
-
-/* .pokemon__stats__list {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-} */
-
-/* .pokemon__stats__list .pokemon__stats__wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-bottom: 8px;
-  width: 100%; 
-}*/
 
 .container__stats {
   display: flex;
@@ -157,49 +140,47 @@
 .pokemon__stats__name {
   display: inline;
   width: fit-content;
-  /*
-  flex: 1;
-  justify-self: flex-start;
-  align-self: flex-start; */
   font-size: 1.5rem;
 }
 
 .pokemon__stats__value {
   display: inline;
   width: fit-content;
-  /*
-  flex: 1;
-  justify-self: flex-end;
-  align-self: flex-end; */
   justify-self: end;
   align-self: end;
   font-size: 1.5rem;
-    
 }
 
 .progress {
-    height: 35px;
-    width: 100%;
-    border-radius: 5px;
-    background-color: #c8c1c1;
-    margin-bottom: 15px
+  height: 35px;
+  width: 100%;
+  border-radius: 5px;
+  background-color: #c8c1c1;
+  margin-bottom: 15px;
 }
 
 .progress-bar {
-    height: 100%;
-    border-radius: 4px;
-    background: linear-gradient(90deg, #FCD676 0%, #E6901E 100%);
-    display: flex;
-    align-items: center;
-    transition: width 0.25s;
+  height: 100%;
+  border-radius: 4px;
+  background: linear-gradient(90deg, #fcd676 0%, #e6901e 100%);
+  display: flex;
+  align-items: center;
+  transition: width 0.25s;
+}
+
+
+.hr {
+  border: 1px solid #ccc;
+  width: 100%;
+  margin-top: 4rem;
 }
 
 .pokemon__movements {
- max-width: 100%;
- margin-top: 4rem;
+  max-width: 100%;
+  margin-top: 4rem;
 }
 
-.movements__title{
+.movements__title {
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2.5rem;
@@ -212,9 +193,6 @@
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 3.5rem;
-  
-  
-
 }
 
 .movements__movement {
@@ -225,214 +203,76 @@
   padding: 0.6rem 2rem;
 }
 
+@media screen and (max-width: 768px) {
+  .pokemon__wh {
+    gap: 2rem;
+    margin: 0 auto;
+  }
 
+  .weight__container {
+    font-size: 1.2rem;
+    gap: 0.3rem;
+  }
 
+  .height__container {
+    font-size: 1.2rem;
+    gap: 0.3rem;
+  }
 
+  .pokemon__type {
+    font-size: 1.6rem;
+  }
 
-/* 
-.fire-gradient {
-    background: linear-gradient(176.37deg, #F96D6F -32.26%, #E35825 22.55%, #E8AE1B 125.72%);
+  .pokemon__types {
+    font-size: 1.3rem;
+    padding: 0.3rem 2rem;
+    margin: 0.5rem;
   }
-  
-  .fire-border {
-    border-color: #E35825;
+
+  .pokemon__ability {
+    font-size: 1.6rem;
   }
-  
-  .fire-color {
-    color: #E35825;
+
+  .pokemon__abilities {
+    font-size: 1.3rem;
+    padding: 0.3rem 2rem;
+    margin: 0.5rem;
   }
-  
-  .grass-gradient {
-    background: linear-gradient(178.92deg, #7EC6C5 0.92%, #ABDAC6 47.96%, #CAE099 99.08%);
+
+  .pokemon__stats__title {
+    font-size: 1.8rem;
   }
-  
-  .grass-border {
-    border-color: #ABDAC6;
+
+  .pokemon__stats__name {
+    font-size: 1.3rem;
   }
-  
-  .grass-color {
-    color: #6abb98;
+
+  .pokemon__stats__value {
+    font-size: 1.3rem;
   }
-  
-  .water-gradient {
-    background: linear-gradient(179.57deg, #133258 -30.14%, #1479FB 56.16%, #82B2F1 114.85%); 
+
+  .progress {
+    height: 25px;
+    width: 100%;
+    border-radius: 3px;
+    margin-bottom: 10px;
   }
-  
-  .water-border {
-    border-color: #1479FB;
+
+  .progress-bar {
+    border-radius: 3px;
+    transition: width 0.25s;
   }
-  
-  .water-background {
-    background-color: #1479FB;
-    color: white;
+
+  .movements__title {
+    font-size: 1.8rem;
   }
-  
-  .bug-gradient {
-    background: linear-gradient(177.56deg, #9bf39a -58.92%, #50da4d 16.57%, #b6ffb5 109.53%); 
+
+  .movements__list {
+    gap: 2rem;
   }
-  
-  .bug-border {
-    border-color: #50da4d;
+
+  .movements__movement {
+    font-size: 1.2rem;
+    border-radius: 0.7rem;
   }
-  
-  .bug-color {
-    color: #46b844;
-  }
-  
-  .fighting-gradient {
-    background: linear-gradient(176.83deg, #96402A -8.78%, #F1613C 169.09%, #CB735D 242.33%);
-  }
-  
-  .fighting-border {
-    border-color: #F1613C;
-  }
-  
-  .fighting-color {
-    color: #F1613C;
-  }
-  
-  .poison-gradient {
-    background: linear-gradient(177.03deg, #5B3184 -11.97%, #A564E3 71.28%, #CE9BFF 135.64%);
-  }
-  
-  .poison-border {
-    border-color: #A564E3;
-  }
-  
-  .poison-color {
-    color: #8e53c4;
-  }
-  
-  .normal-gradient {
-    background: linear-gradient(181.51deg, #735259 -6.44%, #BC6B7C 121.95%, #7C3F4C 186.11%);
-  }
-  
-  .normal-border {
-    border-color: #BC6B7C;
-  }
-  
-  .normal-color {
-    color: #a75c6c;
-  }
-  
-  .ground-gradient {
-    background: linear-gradient(179.75deg, #654008 -19.96%, #895C1A 43.67%, #D69638 138.4%);
-  }
-  
-  .ground-border {
-    border-color: #895C1A;
-  }
-  
-  .ground-color {
-    color: #895C1A;
-  }
-  
-  .ghost-gradient {
-    background: linear-gradient(177.03deg, #323569 -11.97%, #454AA8 57.49%, #787DDA 135.64%);
-  }
-  
-  .ghost-border {
-    border-color: #454AA8;
-  }
-  
-  .ghost-color {
-    color: #454AA8;
-  }
-  
-  .ice-gradient {
-    background: linear-gradient(177.03deg, #6FBEDF -11.97%, #64CBF5 47.77%, #BDEBFE 136.72%);
-  }
-  
-  .ice-border {
-    border-color: #64CBF5;
-  }
-  
-  .ice-color {
-    color: #4fb2d9;
-  }
-  
-  .steel-gradient {
-    background: linear-gradient(179.75deg, #5E736C -19.96%, #728881 43.67%, #A8A8A8 138.4%);
-  }
-  
-  .steel-border {
-    border-color: #728881;
-  }
-  
-  .steel-color {
-    color: #728881;
-  }
-  
-  .rock-gradient {
-    background: linear-gradient(177.03deg, #7E7E7E -11.97%, #b9b9c0 57.49%, #D3D3D3 135.64%);
-  }
-  
-  .rock-border {
-    border-color: #b9b9c0;
-  }
-  
-  .rock-color {
-    color: #75757a;
-  }
-  
-  .dark-gradient {
-    background: linear-gradient(177.03deg, #2a6e5d -11.97%, #0D1211 57.49%, #5A5E5D 135.64%);
-  }
-  
-  .dark-border {
-    border-color: #28413b;
-  }
-  
-  .dark-color {
-    color: #28413b;
-  }
-  
-  .psychic-gradient {
-    background: linear-gradient(179.75deg, #b6720c -19.96%, #da9e43 43.67%, #e2ad5e 108.4%);
-  }
-  
-  .psychic-border {
-    border-color: #da9e43;
-  }
-  
-  .psychic-color {
-    color: #cd943f;
-  }
-  
-  .electric-gradient {
-    background: linear-gradient(179.75deg, #ffe624 -19.96%, #fff265 43.67%, #f6f3ad 98.4%);
-  }
-  
-  .electric-border {
-    border-color: #fff265;
-  }
-  
-  .electric-color {
-    color: #bcad09;
-  }
-  
-  .fairy-gradient {
-    background: linear-gradient(179.75deg, #971B45 -19.96%, #C23867 43.67%, #CD7D98 108.4%);
-  }
-  
-  .fairy-border {
-    border-color: #C23867;
-  }
-  
-  .fairy-color {
-    color: #C23867;
-  }
-  
-  .dragon-gradient {
-    background: linear-gradient(179.75deg, #e7b22d -19.96%, #f2c656 43.67%, #f0d591 98.4%)
-  }
-  
-  .dragon-border {
-    border-color: #f2c656;
-  }
-  
-  .dragon-color {
-    color: #e1a449;
-  }
-  
-   */
+}
