--- a/src/components/PokedexPage/styles/PokeNamePage.css
+++ b/src/components/PokedexPage/styles/PokeNamePage.css
@@ -6,21 +6,64 @@
   align-items: center;
 }
 
+.pokemon__articles-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.pokemon__article {
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+  border: 1px solid black;
+  box-shadow:  -9px 10px 2px rgba(0, 0, 0, 0.1), 9px 0 4px rgba(0, 0, 0, 0.1), 9px 9px 4px rgba(0, 0, 0, 0.1);
+  padding: 3rem;
+  /* min-width: 300px*/;
+  max-width: 1500px; 
+  flex: 1;
+
+}
+
 .pokemon__wrapper {
   display: flex;
   flex-direction: column;
   width: 100%;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2em;
+}
+.container {
+  height: 100%;
+  width: 100%;
+  margin-bottom: 3rem;
+  display: block;
+  position: relative;
+}
+
+.wrapper__background {
+  height: 9rem;
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 5rem;
+  /* position: relative; */
 }
 
 .pokemon__img {
   max-width: 30%;
   min-width: 200px;
   width: 100%;
-  margin: 2rem auto;
-  margin-bottom: 2rem;
+  margin: 2rem auto 0;
+  margin-bottom: 1rem;
+  /* text-align: center; */
+  /* position: absolute; */
+  /* top: -2rem; */
+  
+  /* left: 50%;
+  transform: translateX(-50%); */
+  z-index: 1;
 }
+
+
 
 .pokemon__number {
   text-align: center;
@@ -33,12 +76,25 @@
   text-transform: capitalize;
   font-size: 2rem;
   margin-bottom: 2rem;
+  position: relative;
+  z-index: 1;
 }
+
+/* .pokemon__article {
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+  border: 1px solid black;
+  box-shadow:  -9px 10px 2px rgba(0, 0, 0, 0.1), 9px 0 4px rgba(0, 0, 0, 0.1), 9px 9px 4px rgba(0, 0, 0, 0.1);
+  padding: 3rem;
+  min-width: 300px;
+  max-width: 600px;
+  flex: 1;
+} */
 
 .pokemon__wh {
   display: flex;
   justify-content: center;
-  gap: 6rem;
+  gap: 2rem;
   margin: 0 auto;
   margin-bottom: 2rem;
 }
@@ -172,7 +228,7 @@
 .hr {
   border: 1px solid #ccc;
   width: 100%;
-  margin-top: 4rem;
+  
 }
 
 .pokemon__movements {
@@ -203,9 +259,28 @@
   padding: 0.6rem 2rem;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
+  .pokemon__article {
+    margin-top: 6rem;
+    margin-bottom: 6rem;
+    border: 1px solid black;
+    box-shadow:  -9px 10px 2px rgba(0, 0, 0, 0.1), 9px 0 4px rgba(0, 0, 0, 0.1), 9px 9px 4px rgba(0, 0, 0, 0.1);
+    padding: 3rem;
+    min-width: 300px;
+    max-width: 600px;
+    flex: 1;
+  }
+  
+  .container {
+    margin-bottom: 1rem;
+  }
+
+  .wrapper__background {
+    margin-bottom: 3rem;
+  }
+
   .pokemon__wh {
-    gap: 2rem;
+    gap: 1rem;
     margin: 0 auto;
   }
 
