--- a/src/components/PokedexPage/styles/PokeNamePage.css
+++ b/src/components/PokedexPage/styles/PokeNamePage.css
@@ -265,7 +265,7 @@
     margin-bottom: 6rem;
     border: 1px solid black;
     box-shadow:  -9px 10px 2px rgba(0, 0, 0, 0.1), 9px 0 4px rgba(0, 0, 0, 0.1), 9px 9px 4px rgba(0, 0, 0, 0.1);
-    padding: 3rem;
+    padding: 1rem;
     min-width: 300px;
     max-width: 600px;
     flex: 1;
@@ -273,6 +273,7 @@
   
   .container {
     margin-bottom: 1rem;
+    width: 100%;
   }
 
   .wrapper__background {
